tests/errors/existing_c_file.c
/* Something that does not look like a Cython generated file */
static int external_function(int x) {
    return x + 1;
}
